[gd_scene format=3 uid="uid://ds8xwygeh5ykm"]

[ext_resource type="Script" uid="uid://cv4bvroelqvpy" path="res://menus/out_of_game/main_menu/main_menu_state.gd" id="1_k7k4a"]
[ext_resource type="Texture2D" uid="uid://bucasypwld3mg" path="res://resources/img/DankNoonerLogo.png" id="2_k7k4a"]

[node name="MainMenuState" type="Node" unique_id=494197480]
script = ExtResource("1_k7k4a")
metadata/_custom_type_script = "uid://cv4bvroelqvpy"

[node name="UI" type="Control" parent="." unique_id=1188915724]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLogo" type="TextureRect" parent="UI" unique_id=1293896948]
layout_mode = 0
offset_left = 68.0
offset_top = 43.0
offset_right = 541.0031
offset_bottom = 155.0
texture = ExtResource("2_k7k4a")
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="UI" unique_id=1205553562]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UI/MarginContainer" unique_id=42565368]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"TitleLabel"
text = "Dank"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer" unique_id=321861134]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="PlayBtn" type="Button" parent="UI/MarginContainer/VBoxContainer" unique_id=573512346]
unique_name_in_owner = true
layout_mode = 2
text = "PLAY_LABEL"

[node name="SettingsBtn" type="Button" parent="UI/MarginContainer/VBoxContainer" unique_id=358161549]
unique_name_in_owner = true
layout_mode = 2
text = "SETTINGS_LABEL"

[node name="CustomizeBtn" type="Button" parent="UI/MarginContainer/VBoxContainer" unique_id=1131295413]
unique_name_in_owner = true
layout_mode = 2
text = "CUSTOMIZE_LABEL"

[node name="QuitBtn" type="Button" parent="UI/MarginContainer/VBoxContainer" unique_id=1042468218]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT_LABEL"
